Update tire descriptions and contact information for consistency across pages

--- a/index.html
+++ b/index.html
@@ -2039,12 +2039,16 @@
 					<!-- TEXTO (izquierda) -->
 					<div>
 						<p class="mt-4 text-white/80 leading-relaxed">
-							Landscape Tires USA, Inc. is a U.S.-registered professional tire
-							company headquartered in Los Angeles, California, focused on
-							durability and long-lasting performance. All products are
-							independently designed, using proprietary molds and produced at
-							high-standard facilities in Thailand, meeting DOT and FMVSS
-							standards.
+							<strong> Landscape Durable Tires </strong> are built on a single
+							promise <strong> — Durability</strong>. In a world of fleeting
+							performance and endless choices, we stand for lasting value. As an
+							American tire brand defining the Durable Tire Category, we
+							engineer every Landscape tire to go farther with less wear —
+							delivering confidence from city streets to open highways. At the
+							heart of every Landscape tire lies our proprietary system of
+							innovations <strong> — Aegis High-Durability Tech™ —</strong> a
+							comprehensive technology platform that balances wear-resistance,
+							toughness, and performance through precision engineering:
 						</p>
 
 						<h3 class="mt-6 font-extrabold text-white text-xl">
@@ -2053,29 +2057,97 @@
 
 						<ul class="mt-3 space-y-2 text-white/80">
 							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-road mt-1 text-[var(--brand)]"></i>
+								<i class="fa-solid fa-flask mt-1 text-[var(--brand)]"></i>
 								<span
-									><strong>Comfort on the road:</strong> passenger tyres, quiet
-									and stable on the motorway.</span
+									><strong>Hybrid Compound 2.0</strong>:an advanced polymer
+									blend that improves both toughness and wear resistance.</span
 								>
 							</li>
 							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-mountain mt-1 text-[var(--brand)]"></i>
+								<i class="fa-solid fa-arrows-spin mt-1 text-[var(--brand)]"></i>
 								<span
-									><strong>Rugged off-road:</strong> reliable traction on dirt,
-									mud, sand, gravel and snow.</span
+									><strong>High-Dispersion Mixing Technology:</strong> ensures
+									uniform distribution of rubber components, reducing localized
+									tread wear.</span
 								>
 							</li>
 							<li class="flex items-start gap-3">
 								<i
-									class="fa-solid fa-location-dot mt-1 text-[var(--brand)]"
+									class="fa-solid fa-temperature-high mt-1 text-[var(--brand)]"
 								></i>
 								<span
-									><strong>For each trip:</strong> he right tyre for each
-									destination and vehicle type.</span
+									><strong
+										>Temperature-Pressure Separation Vulcanization :</strong
+									>
+									prevents lifespan variations by precisely controlling curing
+									conditions.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-robot mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Ultra-Uniform Intelligent Manufacturing:</strong>
+									maintains consistent tire structure and automatically adjusts
+									production parameters for optimal balance.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i
+									class="fa-solid fa-shield-halved mt-1 text-[var(--brand)]"
+								></i>
+								<span
+									><strong>Reinforced Casing Technology</strong>enhances impact
+									and tear resistance for longer durability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-wave-square mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>BPOT Adaptive Crown Technology:</strong> optimizes
+									multi-point pressure distribution, minimizing localized wear
+									and extending tread life.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-droplet mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Self-Cleaning Tread Design</strong> automatically
+									expels mud, snow, and stones to maintain strong grip and
+									safety.
+								</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-grip-lines mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Multi-Curvature Tread Block Technology:</strong>
+									increases traction and wear balance across diverse
+									terrains.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-dna mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>High-Tenacity Polyester Cord:</strong>strengthens
+									carcass structure and improves tire stability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-link mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Open-Type UT Steel Belt:</strong> enhances bonding
+									between steel and rubber for superior structural
+									integrity.</span
 								>
 							</li>
 						</ul>
+
+						<p class="mt-4 text-white/80 leading-relaxed">
+							This isn’t just engineering
+							<strong>— it’s our philosophy </strong>: make every mile count.
+							Every Landscape Durable Tire is built to endure — maximizing
+							value, extending performance, and defining what it truly means to
+							be a <strong> durable tire</strong>.
+						</p>
 
 						<div class="mt-6 grid gap-3 sm:grid-cols-2">
 							<div class="rounded-2xl bg-white/10 border border-white/10 p-4">
@@ -2420,9 +2492,9 @@
 								>
 							</p>
 							<p>
-								<a href="tel:(909) 569 7012" class="hover:text-white"
-									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
-									0000 0000</a
+								<a href="tel:9095697012" class="hover:text-white"
+									><i class="fa-solid fa-phone text-[var(--accent)]"></i> (909)
+									569 7012</a
 								>
 							</p>
 						</div>
