--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -74,7 +74,7 @@
 
 						<div class="flex items-center gap-3">
 							<img
-								src="../assets/img/landscape-durable.png"
+								src="../assets/img/landscape-durable_new.png"
 								alt="Landscape"
 								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
 							/>
@@ -196,27 +196,27 @@
 					data-menu
 				>
 					<a
-						href="#search-tire"
+						href="../index.html#search-tire"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Find Your Perfect Tire</a
 					>
 					<a
-						href="#tire-lineup"
+						href="../index.html#tire-lineup"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Tire Lineup</a
 					>
 					<a
-						href="#about-us"
+						href="../index.html#about-us"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>About us</a
 					>
 					<a
-						href="#corporate-news"
+						href="../index.html#corporate-news"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>News</a
 					>
 					<a
-						href="#recruitment"
+						href="../index.html#recruitment"
 						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Join Landscape</a
 					>
@@ -248,15 +248,113 @@
 					<div class="md:col-span-7">
 						<h2 class="text-3xl md:text-4xl font-black">About Landscape</h2>
 						<div class="mt-4 space-y-4 text-white/85 leading-relaxed">
-							<p>
-								Landscape Tires USA, Inc. is a U.S.-registered professional tire
-								company headquartered in Los Angeles, California, focused on
-								durability and long-lasting performance. All products are
-								independently designed, using proprietary molds and produced at
-								high-standard facilities in Thailand, meeting DOT and FMVSS
-								standards.
+							<p class="mt-4 text-white/80 leading-relaxed">
+								<strong> Landscape Durable Tires </strong> are built on a single
+								promise <strong> — Durability</strong>. In a world of fleeting
+								performance and endless choices, we stand for lasting value. As
+								an American tire brand defining the Durable Tire Category, we
+								engineer every Landscape tire to go farther with less wear —
+								delivering confidence from city streets to open highways. At the
+								heart of every Landscape tire lies our proprietary system of
+								innovations <strong> — Aegis High-Durability Tech™ —</strong> a
+								comprehensive technology platform that balances wear-resistance,
+								toughness, and performance through precision engineering:
 							</p>
 						</div>
+
+						<ul class="mt-3 space-y-2 text-white/80">
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-flask mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Hybrid Compound 2.0</strong>:an advanced polymer
+									blend that improves both toughness and wear resistance.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-arrows-spin mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>High-Dispersion Mixing Technology:</strong> ensures
+									uniform distribution of rubber components, reducing localized
+									tread wear.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i
+									class="fa-solid fa-temperature-high mt-1 text-[var(--brand)]"
+								></i>
+								<span
+									><strong
+										>Temperature-Pressure Separation Vulcanization :</strong
+									>
+									prevents lifespan variations by precisely controlling curing
+									conditions.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-robot mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Ultra-Uniform Intelligent Manufacturing:</strong>
+									maintains consistent tire structure and automatically adjusts
+									production parameters for optimal balance.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i
+									class="fa-solid fa-shield-halved mt-1 text-[var(--brand)]"
+								></i>
+								<span
+									><strong>Reinforced Casing Technology</strong>enhances impact
+									and tear resistance for longer durability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-wave-square mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>BPOT Adaptive Crown Technology:</strong> optimizes
+									multi-point pressure distribution, minimizing localized wear
+									and extending tread life.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-droplet mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Self-Cleaning Tread Design</strong> automatically
+									expels mud, snow, and stones to maintain strong grip and
+									safety.
+								</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-grip-lines mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Multi-Curvature Tread Block Technology:</strong>
+									increases traction and wear balance across diverse
+									terrains.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-dna mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>High-Tenacity Polyester Cord:</strong>strengthens
+									carcass structure and improves tire stability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-link mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Open-Type UT Steel Belt:</strong> enhances bonding
+									between steel and rubber for superior structural
+									integrity.</span
+								>
+							</li>
+						</ul>
+
+						<p class="mt-4 text-white/80 leading-relaxed">
+							This isn’t just engineering
+							<strong>— it’s our philosophy </strong>: make every mile count.
+							Every Landscape Durable Tire is built to endure — maximizing
+							value, extending performance, and defining what it truly means to
+							be a <strong> durable tire</strong>.
+						</p>
 
 						<!-- Métricas / proof points -->
 						<dl class="mt-6 grid gap-4 sm:grid-cols-3">
@@ -696,8 +794,8 @@
 							</p>
 							<p>
 								<a href="tel:(909) 569 7012" class="hover:text-white"
-									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
-									0000 0000</a
+									><i class="fa-solid fa-phone text-[var(--accent)]"></i> (909)
+									569 7012</a
 								>
 							</p>
 						</div>
