--- a/pages/news_uber.html
+++ b/pages/news_uber.html
@@ -618,8 +618,8 @@
 							</p>
 							<p>
 								<a href="tel:(909) 569 7012" class="hover:text-white"
-									><i class="fa-solid fa-phone text-[var(--accent)]"></i> +52 81
-									0000 0000</a
+									><i class="fa-solid fa-phone text-[var(--accent)]"></i> (909)
+									569 7012</a
 								>
 							</p>
 						</div>
