--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -13,46 +13,6 @@
 		<link rel="stylesheet" href="../css/style.css" />
 		<!-- Tailwind CDN (prototipo). Compílalo en prod. -->
 		<script src="https://cdn.tailwindcss.com"></script>
-
-		<style>
-			/* subrayado solo al pasar el mouse */
-			header nav a {
-				position: relative;
-			}
-			header nav a::after {
-				content: "";
-				position: absolute;
-				left: 50%;
-				transform: translateX(-50%);
-				bottom: -4px;
-				height: 2px;
-				width: 0;
-				border-radius: 9999px;
-				background: rgba(255, 255, 255, 0.9);
-				transition: width 0.25s ease;
-			}
-			header nav a:hover::after {
-				width: 24px;
-			}
-			@media (max-width: 1023px) {
-				header nav a {
-					text-align: left;
-				}
-				header nav a::after {
-					left: 0;
-					transform: translateX(0);
-				}
-			}
-		</style>
-		<style>
-			html {
-				scroll-behavior: smooth;
-			}
-			/* si ya expusiste la altura en --fixedbar-h, úsala; si no, pon 80px aprox */
-			[id] {
-				scroll-margin-top: var(--fixedbar-h, 80px);
-			}
-		</style>
 	</head>
 	<body class="bg-white text-neutral-900 antialiased">
 		<!-- Fixed Brand Positioning Bar -->
@@ -853,7 +813,7 @@
 						class="flex flex-col gap-2 p-3 sm:flex-row sm:items-center sm:gap-3"
 					>
 						<a
-							href="#find-dealer"
+							href="../index.html#search-tire"
 							class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-3 rounded-xl font-extrabold btn-text"
 							style="
 								background: var(--accent);
@@ -861,7 +821,7 @@
 							"
 							data-cta="find-dealer"
 						>
-							Find the nearest dealer <span>🧭</span>
+							Find the perfect tire <span>🧭</span>
 						</a>
 						<button
 							type="button"
@@ -1096,6 +1056,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
-		<script src="../js/main.js"></script>
+		<script src="../js/about_us.js"></script>
 	</body>
 </html>
