--- a/pages/news_uber.html
+++ b/pages/news_uber.html
@@ -440,7 +440,7 @@
 			</div>
 
 			<!-- Pie / tags -->
-			<footer class="px-6 md:px-10 pb-8">
+			<!-- <footer class="px-6 md:px-10 pb-8">
 				<div class="flex flex-wrap gap-2">
 					<span
 						class="inline-flex items-center text-xs px-2.5 py-1 rounded bg-black/5 text-neutral-700"
@@ -459,7 +459,7 @@
 						>Wear Testing</span
 					>
 				</div>
-			</footer>
+			</footer> -->
 		</article>
 		<br /><br />
 		<!-- ==================== FOOTER ==================== -->
@@ -920,6 +920,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../js/news_uber.js"></script>
 	</body>
 </html>
