Revise "About Landscape" section for clarity and enhance product descriptions

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -209,7 +209,7 @@
 						<h2 class="text-3xl md:text-4xl font-black">About Landscape</h2>
 						<div class="mt-4 space-y-4 text-white/85 leading-relaxed">
 							<p class="mt-4 text-white/80 leading-relaxed">
-								<strong> Landscape Durable Tires </strong> are built on a single
+								<!-- <strong> Landscape Durable Tires </strong> are built on a single
 								promise <strong> — Durability</strong>. In a world of fleeting
 								performance and endless choices, we stand for lasting value. As
 								an American tire brand defining the Durable Tire Category, we
@@ -218,106 +218,27 @@
 								heart of every Landscape tire lies our proprietary system of
 								innovations <strong> — Aegis High-Durability Tech™ —</strong> a
 								comprehensive technology platform that balances wear-resistance,
-								toughness, and performance through precision engineering:
+								toughness, and performance through precision engineering: -->
+								Landscape Durable Tires are built on a single promise
+								<strong>— Durability </strong>. In a world of fleeting
+								performance and endless choices, we stand for lasting value. As
+								an American tire brand defining the
+								<strong>Durable Tire Category</strong>, we engineer every
+								Landscape tire to go farther with less wear — delivering
+								confidence from city streets to open highways.
 							</p>
 						</div>
 
-						<ul class="mt-3 space-y-2 text-white/80">
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-flask mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>Hybrid Compound 2.0</strong>:an advanced polymer
-									blend that improves both toughness and wear resistance.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-arrows-spin mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>High-Dispersion Mixing Technology:</strong> ensures
-									uniform distribution of rubber components, reducing localized
-									tread wear.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i
-									class="fa-solid fa-temperature-high mt-1 text-[var(--brand)]"
-								></i>
-								<span
-									><strong
-										>Temperature-Pressure Separation Vulcanization :</strong
-									>
-									prevents lifespan variations by precisely controlling curing
-									conditions.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-robot mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>Ultra-Uniform Intelligent Manufacturing:</strong>
-									maintains consistent tire structure and automatically adjusts
-									production parameters for optimal balance.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i
-									class="fa-solid fa-shield-halved mt-1 text-[var(--brand)]"
-								></i>
-								<span
-									><strong>Reinforced Casing Technology</strong>enhances impact
-									and tear resistance for longer durability.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-wave-square mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>BPOT Adaptive Crown Technology:</strong> optimizes
-									multi-point pressure distribution, minimizing localized wear
-									and extending tread life.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-droplet mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>Self-Cleaning Tread Design</strong> automatically
-									expels mud, snow, and stones to maintain strong grip and
-									safety.
-								</span>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-grip-lines mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>Multi-Curvature Tread Block Technology:</strong>
-									increases traction and wear balance across diverse
-									terrains.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-dna mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>High-Tenacity Polyester Cord:</strong>strengthens
-									carcass structure and improves tire stability.</span
-								>
-							</li>
-							<li class="flex items-start gap-3">
-								<i class="fa-solid fa-link mt-1 text-[var(--brand)]"></i>
-								<span
-									><strong>Open-Type UT Steel Belt:</strong> enhances bonding
-									between steel and rubber for superior structural
-									integrity.</span
-								>
-							</li>
-						</ul>
-
-						<p class="mt-4 text-white/80 leading-relaxed">
+						<!-- <p class="mt-4 text-white/80 leading-relaxed">
 							This isn’t just engineering
 							<strong>— it’s our philosophy </strong>: make every mile count.
 							Every Landscape Durable Tire is built to endure — maximizing
 							value, extending performance, and defining what it truly means to
 							be a <strong> durable tire</strong>.
-						</p>
+						</p> -->
 
 						<!-- Métricas / proof points -->
-						<dl class="mt-6 grid gap-4 sm:grid-cols-3">
+						<!-- <dl class="mt-6 grid gap-4 sm:grid-cols-3">
 							<div class="rounded-2xl bg-white/10 border border-white/10 p-4">
 								<dt class="text-sm text-white/70">Focus</dt>
 								<dd class="text-lg font-extrabold">Performance + Value</dd>
@@ -330,7 +251,7 @@
 								<dt class="text-sm text-white/70">Land</dt>
 								<dd class="text-lg font-extrabold">Road & off-road</dd>
 							</div>
-						</dl>
+						</dl> -->
 					</div>
 
 					<!-- Carrusel scroll-snap a la derecha -->
@@ -340,7 +261,7 @@
 						>
 							<div
 								class="snap-x snap-mandatory overflow-x-auto flex w-full h-[320px] md:h-[420px] scroll-smooth"
-								aria-label="Galería de imágenes"
+								aria-label="Gallery"
 							>
 								<figure id="s2" class="min-w-full snap-start relative">
 									<img
@@ -505,10 +426,9 @@
 						Our Philosophy
 					</h2>
 					<p class="text-white/80 leading-relaxed max-w-none">
-						We are committed to establishing the best service system to provide
-						customers with the best driving experience and the most suitable
-						solutions. This is the foundation of our business operations, and we
-						believe it is the healthiest way to create sustainable development.
+						Every <strong> Landscape Durable Tire </strong>is built to endure —
+						maximizing value, extending performance, and defining what it truly
+						means to be a durable tire.
 					</p>
 				</div>
 			</section>
@@ -523,36 +443,94 @@
 							Innovation and Heritage
 						</h3>
 						<p class="text-white/80 leading-relaxed max-w-none">
-							Since the establishment of our company, our R&D technology has
-							been at the forefront of the industry. We have always focused on
-							providing high-performance, multi-terrain tires to meet the
-							requirement of various vehicles and harsh driving conditions. Our
-							innovation and customer satisfaction have always been at the
-							forefront of the industry, which also drives us to constantly
-							improvement and provide the best solutions for every driver.
+							At the heart of every Landscape tire lies our proprietary system
+							of innovations <strong> — Aegis High-Durability Tech™ — </strong>a
+							comprehensive technology platform that balances wear-resistance,
+							toughness, and performance through precision engineering.
 						</p>
-						<ul class="mt-5 space-y-3 text-white/85">
-							<li class="flex gap-3">
-								<i
-									class="fa-solid fa-flask text-[var(--brand,#6B2DFB)] mt-1"
-								></i>
-								Advanced compounds for life and grip.
+						<ul class="mt-3 space-y-2 text-white/80">
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-flask mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Hybrid Compound 2.0</strong>:an advanced polymer
+									blend that improves both toughness and wear resistance.</span
+								>
 							</li>
-							<li class="flex gap-3">
-								<i class="fa-solid fa-dna text-[var(--brand,#6B2DFB)] mt-1"></i>
-								Belt design for reduced noise and uniform wear.
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-arrows-spin mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>High-Dispersion Mixing Technology:</strong> ensures
+									uniform distribution of rubber components, reducing localized
+									tread wear.</span
+								>
 							</li>
-							<li class="flex gap-3">
+							<li class="flex items-start gap-3">
 								<i
-									class="fa-solid fa-gauge-high text-[var(--brand,#6B2DFB)] mt-1"
+									class="fa-solid fa-temperature-high mt-1 text-[var(--brand)]"
 								></i>
-								Braking and rolling resistance tests.
+								<span
+									><strong
+										>Temperature-Pressure Separation Vulcanization :</strong
+									>
+									prevents lifespan variations by precisely controlling curing
+									conditions.</span
+								>
 							</li>
-							<li class="flex gap-3">
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-robot mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Ultra-Uniform Intelligent Manufacturing:</strong>
+									maintains consistent tire structure and automatically adjusts
+									production parameters for optimal balance.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
 								<i
-									class="fa-solid fa-screwdriver-wrench text-[var(--brand,#6B2DFB)] mt-1"
+									class="fa-solid fa-shield-halved mt-1 text-[var(--brand)]"
 								></i>
-								Continuous user-focused improvement.
+								<span
+									><strong>Reinforced Casing Technology</strong>enhances impact
+									and tear resistance for longer durability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-wave-square mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>BPOT Adaptive Crown Technology:</strong> optimizes
+									multi-point pressure distribution, minimizing localized wear
+									and extending tread life.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-droplet mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Self-Cleaning Tread Design</strong> automatically
+									expels mud, snow, and stones to maintain strong grip and
+									safety.
+								</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-grip-lines mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Multi-Curvature Tread Block Technology:</strong>
+									increases traction and wear balance across diverse
+									terrains.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-dna mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>High-Tenacity Polyester Cord:</strong>strengthens
+									carcass structure and improves tire stability.</span
+								>
+							</li>
+							<li class="flex items-start gap-3">
+								<i class="fa-solid fa-link mt-1 text-[var(--brand)]"></i>
+								<span
+									><strong>Open-Type UT Steel Belt:</strong> enhances bonding
+									between steel and rubber for superior structural
+									integrity.</span
+								>
 							</li>
 						</ul>
 					</div>
