Update image links to be clickable and enhance navigation across pages

--- a/index.html
+++ b/index.html
@@ -1962,19 +1962,15 @@
 					<!-- TEXTO (izquierda) -->
 					<div>
 						<p class="mt-4 text-white/80 leading-relaxed">
-							<strong> Landscape Durable Tires </strong> are built on a single
-							promise <strong> — Durability</strong>. In a world of fleeting
-							performance and endless choices, we stand for lasting value. As an
-							American tire brand defining the Durable Tire Category, we
+							Landscape Durable Tires are built on a single promise
+							<strong>— Durability </strong>. In a world of fleeting performance
+							and endless choices, we stand for lasting value. As an American
+							tire brand defining the <strong>Durable Tire Category</strong>, we
 							engineer every Landscape tire to go farther with less wear —
-							delivering confidence from city streets to open highways. At the
-							heart of every Landscape tire lies our proprietary system of
-							innovations <strong> — Aegis High-Durability Tech™ —</strong> a
-							comprehensive technology platform that balances wear-resistance,
-							toughness, and performance through precision engineering:
+							delivering confidence from city streets to open highways.
 						</p>
 
-						<h3 class="mt-6 font-extrabold text-white text-xl">
+						<!-- <h3 class="mt-6 font-extrabold text-white text-xl">
 							Excellent Products
 						</h3>
 
@@ -2095,7 +2091,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 
 					<!-- CARRUSEL (derecha) -->
