--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -33,11 +33,13 @@
 						<!-- Opción A: imagen -->
 
 						<div class="flex items-center gap-3">
-							<img
-								src="../assets/img/landscape-durable_new.png"
-								alt="Landscape"
-								class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
-							/>
+							<a href="../index.html"
+								><img
+									src="../assets/img/landscape-durable_new.png"
+									alt="Landscape"
+									class="h-6 sm:h-7 md:h-8 w-auto drop-shadow"
+								/>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -107,11 +109,12 @@
 					class="py-5 flex items-center justify-between gap-4 lg:justify-center"
 				>
 					<!-- Tu logotipo (centrado, proporción similar al screenshot) -->
-					<img
-						src="../assets/img/logo_new.png"
-						alt="Brand"
-						class="h-12 md:h-14 w-auto"
-					/>
+					<a href="../index.html"
+						><img
+							src="../assets/img/logo_new.png"
+							alt="Brand"
+							class="h-12 md:h-14 w-auto"
+					/></a>
 					<button
 						type="button"
 						class="mobile-nav-toggle lg:hidden"
