Implement code changes to enhance functionality and improve performance

--- a/pages/sizes.html
+++ b/pages/sizes.html
@@ -607,7 +607,7 @@
 						class="flex flex-col gap-2 p-3 sm:flex-row sm:items-center sm:gap-3"
 					>
 						<a
-							href="#find-dealer"
+							href="../index.html#search-tire"
 							class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-3 rounded-xl font-extrabold btn-text"
 							style="
 								background: var(--accent);
@@ -615,7 +615,7 @@
 							"
 							data-cta="find-dealer"
 						>
-							Find the nearest dealer <span>🧭</span>
+							Find the perfect tire <span>🛞</span>
 						</a>
 						<button
 							type="button"
