Add new tire specifications page for N5000 Platinum model with detailed attributes, sizes, and specs

--- a/index.html
+++ b/index.html
@@ -1451,34 +1451,65 @@
 
 				<!-- Pitch + Perks -->
 				<div class="grid lg:grid-cols-3 gap-5">
-					<article class="rec-card lg:col-span-1">
-						<h4 class="text-white font-bold text-lg">Why join us?</h4>
-						<p class="text-white/70 text-sm mt-2">
-							Join a fast-rising U.S. brand redefining tire durability. Work
-							with advanced materials, testing systems, and high-performance
-							teams. We offer competitive compensation, clear career paths, and
-							a culture that rewards initiative and integrity. <br /><br />
-							Less Wear, More Miles — for both our tires and your career.
-						</p>
-						<div class="mt-4 grid grid-cols-2 gap-3 text-white/85 text-sm">
-							<div class="flex items-center gap-3">
-								<i class="fa-solid fa-medal text-[var(--accent)]"></i>
-								Performance incentives
+					<div class="lg:col-span-1 space-y-5">
+						<article class="rec-card">
+							<h4 class="text-white font-bold text-lg">Why join us?</h4>
+							<p class="text-white/70 text-sm mt-2">
+								Join a fast-rising U.S. brand redefining tire durability. Work
+								with the most advanced materials, testing systems, and
+								highest-performing teams. We offer competitive compensation,
+								clear career paths, and a cultur e that rewards initiative and
+								integrity. <br /><br />
+								Less Wear, More Miles — for both our tires and your career.
+							</p>
+							<div class="mt-4 grid grid-cols-2 gap-3 text-white/85 text-sm">
+								<div class="flex items-center gap-3">
+									<i class="fa-solid fa-medal text-[var(--accent)]"></i>
+									Performance incentives
+								</div>
+								<div class="flex items-center gap-3">
+									<i
+										class="fa-solid fa-graduation-cap text-[var(--accent)]"
+									></i>
+									Continuous upskilling
+								</div>
+								<div class="flex items-center gap-3">
+									<i class="fa-solid fa-house-laptop text-[var(--accent)]"></i>
+									Hybrid / remote
+								</div>
+								<div class="flex items-center gap-3">
+									<i class="fa-solid fa-shield-heart text-[var(--accent)]"></i>
+									Insurance & well-being
+								</div>
 							</div>
-							<div class="flex items-center gap-3">
-								<i class="fa-solid fa-graduation-cap text-[var(--accent)]"></i>
-								Continuous upskilling
-							</div>
-							<div class="flex items-center gap-3">
-								<i class="fa-solid fa-house-laptop text-[var(--accent)]"></i>
-								Hybrid / remote
-							</div>
-							<div class="flex items-center gap-3">
-								<i class="fa-solid fa-shield-heart text-[var(--accent)]"></i>
-								Insurance & well-being
-							</div>
-						</div>
-					</article>
+						</article>
+						<article class="rec-card">
+							<h4 class="text-white font-bold text-lg">Our Values</h4>
+							<p class="text-white/70 text-sm mt-2">
+								At Landscape Tires USA, Inc., our culture is built on
+								<strong> DURABILITY</strong>. We believe durable products come
+								from durable people: consistent, reliable, and purpose-driven.
+							</p>
+							<ul class="mt-4 space-y-3 text-white/85 text-sm">
+								<li class="flex items-center gap-3">
+									<i
+										class="fa-solid fa-scale-balanced text-[var(--accent)]"
+									></i>
+									Integrity — We do what’s right, even when it’s hard.
+								</li>
+								<li class="flex items-center gap-3">
+									<i
+										class="fa-solid fa-hourglass-half text-[var(--accent)]"
+									></i>
+									Endurance — We stay committed to long-term goals.
+								</li>
+								<li class="flex items-center gap-3">
+									<i class="fa-solid fa-seedling text-[var(--accent)]"></i>
+									Growht — We believe progress and reliability go hand in hand.
+								</li>
+							</ul>
+						</article>
+					</div>
 
 					<!-- Filtros + Vacantes -->
 					<div class="lg:col-span-2">
@@ -1574,55 +1605,67 @@
 										</p>
 										<ul>
 											<li>
-												• Identify, approach, and secure new business with tire
-												distributors, wholesalers, and retail stores across the
-												U.S.
+												• Develop and expand partnerships with tire
+												distributors, wholesalers, and retail dealers across the
+												United States.
 											</li>
 											<li>
-												• Develop and maintain strong, long-term relationships
-												with existing customers.
+												• Maintain and strengthen long-term relationships with
+												existing clients, improving collaboration and
+												satisfaction.
 											</li>
 											<li>
-												• Achieve and exceed sales targets through strategic
-												account management and market development.
+												• Achieve and consistently exceed monthly and annual
+												sales targets through strategic account management and
+												market expansion.
 											</li>
 											<li>
-												• Conduct regular market research to identify trends,
-												competitor activity, and customer needs.
+												• Conduct regular market research to identify industry
+												trends, competitive dynamics, and emerging customer
+												needs.
 											</li>
 											<li>
-												• Provide product knowledge, technical support, and
-												training to clients as needed.
+												• Provide systematic product knowledge support,
+												technical consultation, and sales training to clients.
 											</li>
 											<li>
-												• Represent the company at trade shows, industry events,
-												and client meetings.
+												• Represent the company at trade shows, marketing
+												events, and client meetings to expand brand presence and
+												influence.
 											</li>
 										</ul>
 										<p>
 											<strong>Qualifications:</strong>
 										</p>
 										<ul>
-											<li>• Sales experience in the U.S. market.</li>
 											<li>
-												• Strong existing network with tire distributors,
-												wholesalers, and retail outlets.
+												• Proven experience in the U.S. tire market with a solid
+												understanding of industry structure and operations.
 											</li>
 											<li>
-												• Deep understanding of the U.S. tire industry,
-												including PCR, LTR, TBR, and specialty tires.
+												• Established network and resources across distributors,
+												wholesalers, and retail channels.
 											</li>
 											<li>
-												• Excellent negotiation, communication, and
-												relationship-building skills.
+												• Familiarity with U.S. tire product categories (PCR,
+												LTR, TBR, and specialty tires) and key competitors.
 											</li>
 											<li>
-												• Self-motivated, results-driven, and able to work
-												independently with minimal supervision.
+												• Excellent negotiation, communication, and customer
+												relationship management skills.
 											</li>
 											<li>
-												• Willingness to travel frequently within the U.S. to
-												meet customers and develop markets.
+												• Self-motivated, goal-oriented, and capable of
+												independently developing markets and owning results.
+											</li>
+											<li>
+												• Willingness to travel nationwide for client visits,
+												channel expansion, and business execution.
+											</li>
+											<li>
+												• Demonstrates integrity, reliability, and a strong work
+												ethic, and is motivated to grow with the company and the
+												brand.
 											</li>
 										</ul>
 										<p>
